# otadump

./: Cargo.toml  bun.lockb  index.html  package.json
.github/workflows/: release.yaml
src/: App.tsx  helper-components.tsx  interfaces.ts  lib.rs  payload.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gui.rs  main.rs
src-tauri/src/core/: extract.rs  payload.rs
