[package]
authors = [
    "Kartik Sharma <kartik.sharma522@gmail.com>",
    "Ajeet D'Souza <98ajeet@gmail.com>",
]
description = "Extract partitions from Android OTA files"
categories = ["command-line-utilities", "android"]
edition = "2024"
keywords = ["android", "cli", "terminal"]
license = "MIT"
name = "otadump"
repository = "https://github.com/crazystylus/otadump"
readme = "README.md"
rust-version = "1.85.0"
version = "0.1.3"


[build-dependencies]
prost-build = "0.14.1"

[dependencies]
anyhow = "1.0.69"
bzip2 = { version = "0.6.0", features = ["static"] }
clap = { version = "4.2.1", features = ["derive"] }
color-print = "0.3.4"
hex = "0.4.3"
indicatif = "0.17.3"
liblzma = { version = "0.4.2", features = ["fat-lto", "static"] }
memmap2 = "0.9.5"
nom = "7.1.1"
nom-derive = "0.10.1"
prost = "0.14.1"
rayon = "1.7.0"
ring = { version = "0.17.11", features = ["std"] }
sync-unsafe-cell = "0.1.0"
tempfile = "3.6.0"
zip = { version = "4.1.0", default-features = false }
zstd = { version = "0.13.2", features = ["fat-lto"] }

[profile.release]
codegen-units = 1
debug = 0
lto = true
strip = true
